--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,6 +1,6 @@
 .about-container{
     padding: 20px;
-    max-width: 100vw;
+    max-width: 100%;
     height: max-content;
     background-color: black;
     color: white;
@@ -13,13 +13,26 @@
 
 .details{
     text-align: left;
+    padding: 10px;
+    width: max-content;
 }
+
+.details > *{
+    margin: 1px;
+}
+
+.details > h2{
+    font-family: 'Poppins', sans-serif;
+}
+
 .details > h1{
     background: -webkit-linear-gradient(#FF512F , #DD2476);
     text-transform: uppercase;
-    font-size: 5rem;
+    font-size: 4.3rem;
     font-weight: bold;
-    font-family: 'Fugaz One', cursive;
+    /* font-family: 'Fugaz One', cursive; */
+    font-family: 'Poppins', sans-serif;
+
     letter-spacing: 3px;
     text-shadow: 2px 2px 8px #ED1E79;
     -webkit-background-clip: text;
@@ -27,9 +40,13 @@
 }
 
 .details > p{
-    margin: 10px 0;
-    font-style: italic;
+    /* margin: 5px 0; */
+    letter-spacing: 2px;
+    font-family: 'Poppins', sans-serif;
+    width: 100%;
+    text-transform: capitalize;
 }
+
 .myImage{
     position: relative;
     width: 300px;
@@ -48,6 +65,7 @@
     width: 30%;
     height: 100%;
     background: linear-gradient(#FF512F , #DD2476);
+    transition: all 0.3s linear;
     animation: rotate 4s linear infinite;
 }
 
@@ -87,6 +105,6 @@
 
 @media screen and (max-width:403px) {
     .details > h1{
-        font-size: 22px;
+        font-size: 25px;
     }
 }
