--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,5 +1,5 @@
 .header{
-    max-width: 100vw;
+    min-width: 100%;
     height: 70px;
     background-color: black;
     display: flex;
@@ -30,7 +30,7 @@
 }
 
 .featured > a:hover{
-    text-shadow: 2px 2px 4px #ED1E79;
+    text-shadow: 0px 0px 10px #ED1E79;
 }
 
 .contactMe > a{
