--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -42,6 +42,8 @@
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(white, 0.2),
                 0 6px 20px 0 rgba(white, 0.19);
+    min-height: 300px;
+    object-fit: cover;
 }
 
 .btn > a{
