--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar{
+  width: 5px;
+  background-color: black;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #FF512F;
+  border-radius: 10px;
 }
 body {
   margin: 0;
@@ -13,6 +24,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  /* overflow: hidden; */
 }
 
 code {
